[package]
name = "parse_tree"
version = "0.0.6"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
description = "A non-abstract syntax tree type"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/parse_tree"
documentation = "https://docs.rs/parse_tree"

[dependencies]
lazy_static = "1"
serde = "1"
