[package]
name = "parse_tree"
version = "0.0.7"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
description = "A non-abstract syntax tree type"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/parse_tree"
documentation = "https://docs.rs/parse_tree"

[dependencies]
text_unit = "0.1.0"
